TRAIN.sh.1060885.out
Global seed set to 1
########################################
Load pretrained CPC
########################################
Froze EncoderCPC!
------------------------------------------------------------
Dataloader
  datasets: ['callhome_eng']
  type: sliding
  sample_rate: 16000
  audio_mono: False
  audio_duration: 20
  audio_normalize: True
  audio_overlap: 2
  audio_context_duration: 5
  ipu_min_time: 1
  ipu_pause_time: 0.2
  vad_hz: 50
  vad_horizon: 2
  vad_history: True
  vad_history_times: [60, 30, 10, 5]

Traceback (most recent call last):
  File "/data/group1/z40351r/VoiceActivityProjection/vap/train.py", line 499, in <module>
    train()
  File "/data/group1/z40351r/VoiceActivityProjection/vap/train.py", line 194, in train
    dm.prepare_data()
  File "/data/group1/z40351r/datasets_turntaking/datasets_turntaking/dialog_audio_dm.py", line 140, in prepare_data
    _ = get_dialog_audio_datasets(
  File "/data/group1/z40351r/datasets_turntaking/datasets_turntaking/dialog_audio_dm.py", line 47, in get_dialog_audio_datasets
    dsets.append(load_callhome(split, name="eng"))
  File "/data/group1/z40351r/datasets_turntaking/datasets_turntaking/dataset/callhome/__init__.py", line 17, in load_callhome
    dset = load_dataset(
  File "/home/z40351r/anaconda3/envs/vap2/lib/python3.9/site-packages/datasets/load.py", line 1773, in load_dataset
    builder_instance = load_dataset_builder(
  File "/home/z40351r/anaconda3/envs/vap2/lib/python3.9/site-packages/datasets/load.py", line 1512, in load_dataset_builder
    builder_cls = import_main_class(dataset_module.module_path)
  File "/home/z40351r/anaconda3/envs/vap2/lib/python3.9/site-packages/datasets/load.py", line 115, in import_main_class
    module = importlib.import_module(module_path)
  File "/home/z40351r/anaconda3/envs/vap2/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 846, in exec_module
  File "<frozen importlib._bootstrap_external>", line 983, in get_code
  File "<frozen importlib._bootstrap_external>", line 913, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/z40351r/.cache/huggingface/modules/datasets_modules/datasets/callhome/22a53696bfc7461c5b5f1ebefcb90643c29119fd0157f075cab6d646db347ae4/callhome.py", line 64
    description=_DESCRIPTION,
    ^
SyntaxError: invalid syntax
